--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="btn_registrarse">Registrarse</string>
     <string name="phone_numer">Número de teléfono</string>
     <string name="company_id">Id de empresa</string>
+    <string name="tv_nom_categoria">Nombre de la categoría</string>
 </resources>
