--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="company_id">Id de empresa</string>
     <string name="btn_add_new">+</string>
     <string name="tv_nom_categoria">Nombre de la categoría</string>
+    <string name="tvCategorias">Elige una de las siguientes categorías:</string>
 </resources>
