--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,16 @@
     <string name="btn_registrarse">Registrarse</string>
     <string name="phone_numer">Número de teléfono</string>
     <string name="company_id">Id de empresa</string>
+    <string name="no_email">Por favor, introduza una dirección de correo electrónico.</string>
+    <string name="no_name">Por favor, introduzca un nombre.</string>
+    <string name="no_lastname">Por favor, introduzca sus apellidos.</string>
+    <string name="no_password">Por favor, introduzca una contraseña.</string>
+    <string name="no_pass_conf">Por favor, confirme su contraseña</string>
+    <string name="passw_must_match">Las contraseñas deben de coincidir.</string>
+    <string name="no_phone_num">Por favor, introduzca un número de teléfono.</string>
+    <string name="no_com_id">Por favor, introduzca un id de empresa.</string>
+    <string name="unvalid_com_id">Por favor, introduzca un id de empresa válido.</string>
+    <string name="user_registered">Usuario registrado exitosamente.</string>
+    <string name="unable_to_resgister">No se ha podido registrar el usuario.</string>
+    <string name="email_in_use">La dirección de correo ya está en uso.</string>
 </resources>
