--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="btn_add_new">+</string>
     <string name="tv_nom_categoria">Nombre de la categoría</string>
     <string name="tvCategorias">Elige una de las siguientes categorías:</string>
+    <string name="titulo_ticket">Título: </string>
+    <string name="descripcion_ticket">"Descripción: "</string>
+    <string name="btn_candelar">Cancelar</string>
+    <string name="btn_guardar">Guardar</string>
+    <string name="new_ticket">Nuevo Ticket</string>
+    <string name="toast_cancelar_new_ticket">Ticket cancelado</string>
+    <string name="toast_guardar_new_ticket">Ticket guardado</string>
 </resources>
