--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="btn_add_new">+</string>
     <string name="tv_nom_categoria">Nombre de la categoría</string>
     <string name="tvCategorias">Elige una de las siguientes categorías:</string>
+    <string name="incorrect_credentials">Usuario o contraseña incorrectos.</string>
 </resources>
