--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="btn_add_new">+</string>
     <string name="tv_nom_categoria">Nombre de la categoría</string>
     <string name="tvCategorias">Elige una de las siguientes categorías:</string>
+    <string name="enter_email">Introduce un correo electrónico</string>
+    <string name="enter_pass">Introduce la contraseña</string>
+    <string name="invalid_email">El formato del email no es válido</string>
 </resources>
