Status update email sender

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,6 @@
     <string name="tv_ticket_list_filtro">Filtrar por estado:</string>
     <string name="ticket_update_fail">Error. Inténtelo más tarde.</string>
     <string name="tv_titulo_detalle">Detalle</string>
+    <string name="ticket_status_update">Estimado/a %1$s,\n\nQueremos informarte que el estado del ticket con ID: %2$d ha sido actualizado.\nEl nuevo estado del ticket es: %3$s.\n\nPor favor, no dudes en contactarnos si necesitas más información o asistencia.</string>
 
 </resources>
