--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,6 @@
     <string name="ticket_update_fail">Error. Inténtelo más tarde.</string>
     <string name="tv_titulo_detalle">Detalle</string>
     <string name="ticket_status_update">Estimado/a %1$s,\n\nQueremos informarte que el estado del ticket con ID: %2$d ha sido actualizado.\nEl nuevo estado del ticket es: %3$s.\n\nPor favor, no dudes en contactarnos si necesitas más información o asistencia.</string>
+    <string name="incorrect_rec_code">Código incorrecto.</string>
 
 </resources>
