--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,14 @@
     <string name="ticket_update_fail">Error. Inténtelo más tarde.</string>
     <string name="tv_titulo_detalle">Detalle</string>
     <string name="ticket_status_update">Estimado/a %1$s,\n\nQueremos informarte que el estado del ticket con ID: %2$d ha sido actualizado.\nEl nuevo estado del ticket es: %3$s.\n\nPor favor, no dudes en contactarnos si necesitas más información o asistencia.</string>
+    <string name="ticket_status_update_subject">"Notificación: Cambio de estado en el ticket con ID: %1$d"</string>
+    <string name="verification_body">Hola! \nSu código de verificación es: %s</string>
     <string name="incorrect_rec_code">Código incorrecto.</string>
     <string name="correct_rec_code">Código correcto.</string>
+    <string name="no_password_conf">Por favor confirme su contraseña.</string>
+    <string name="password_changed_email_subject">!Su contraseña ha cambiado!</string>
+    <string name="password_changed_email_body">Estimado usuario,\n\nLa contraseña de acceso a su cuenta ResolverRocket ha sido cambiada.\nPor favor, si usted no he reaalizado este cambio póngase en contacto con nosotros inmediatemente.</string>
+    <string name="password_changed_success">Contraseña cambiada satisfactoriamente.</string>
+    <string name="password_changed_fail">Se ha producido un error.</string>
 
 </resources>
