--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,7 +87,7 @@
     <string name="password_uppercase">1 letra mayúscula.</string>
     <string name="password_lowercase">1 letra minúscula.</string>
     <string name="password_digit">1 número.</string>
-    <string name="password_special_char">1 carácter especial (.@#$%^&amp;+=).</string>
+    <string name="password_special_char">1 carácter especial (.@#$%^&amp;+=¡!?+¿?).</string>
     <string name="invalid_password">La contraseña no cumple con todos los requisitos.</string>
     <string name="tv_datos_usuario">Datos del usuario</string>
     <string name="btn_cambiar_contr">Cambiar contraseña</string>
