--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,36 +1,35 @@
 <resources>
-    <string name="app_name">TFC_DAM_TICKETS</string>
+    <string name="app_name">Resolver Rocket</string>
     <string name="login">Iniciar sesión</string>
-    <string name="email">Email</string>
+    <string name="email">Correo electrónico</string>
     <string name="password">Contraseña</string>
     <string name="btn_login">Iniciar sesión</string>
-    <string name="username">Username</string>
+    <string name="username">Nombre de usuario</string>
     <string name="confirm_password">Confirmar contraseña</string>
     <string name="btn_registrarse">Registrarse</string>
     <string name="phone_numer">Número de teléfono</string>
-    <string name="company_id">Id de empresa</string>
+    <string name="company_id">ID de empresa</string>
 
-    <string name="no_email">Por favor, introduza una dirección de correo electrónico.</string>
+    <string name="no_email">Por favor, introduzca una dirección de correo electrónico.</string>
     <string name="no_name">Por favor, introduzca un nombre.</string>
     <string name="no_lastname">Por favor, introduzca sus apellidos.</string>
     <string name="no_password">Por favor, introduzca una contraseña.</string>
-    <string name="no_pass_conf">Por favor, confirme su contraseña</string>
-    <string name="passw_must_match">Las contraseñas deben de coincidir.</string>
+    <string name="no_pass_conf">Por favor, confirme su contraseña.</string>
+    <string name="passw_must_match">Las contraseñas deben coincidir.</string>
     <string name="no_phone_num">Por favor, introduzca un número de teléfono.</string>
-    <string name="no_com_id">Por favor, introduzca un id de empresa.</string>
-    <string name="unvalid_com_id">Por favor, introduzca un id de empresa válido.</string>
+    <string name="no_com_id">Por favor, introduzca un ID de empresa.</string>
+    <string name="unvalid_com_id">Por favor, introduzca un ID de empresa válido.</string>
     <string name="user_registered">Usuario registrado exitosamente.</string>
-    <string name="unable_to_resgister">No se ha podido registrar el usuario.</string>
-    <string name="email_in_use">La dirección de correo ya está en uso.</string>
+    <string name="unable_to_resgister">No se ha podido registrar al usuario.</string>
+    <string name="email_in_use">La dirección de correo electrónico ya está en uso.</string>
 
     <string name="btn_add_new">+</string>
     <string name="tv_nom_categoria">Nombre de la categoría</string>
-    <string name="tvCategorias">Elige una de las siguientes categorías:</string>
+    <string name="tvCategorias">Elija una de las siguientes categorías:</string>
 
-    <string name="enter_email">Introduce un correo electrónico</string>
-    <string name="enter_pass">Introduce la contraseña</string>
-    <string name="invalid_email">El formato del email no es válido</string>
-
+    <string name="enter_email">Introduzca un correo electrónico</string>
+    <string name="enter_pass">Introduzca la contraseña</string>
+    <string name="invalid_email">El formato del correo electrónico no es válido.</string>
 
     <string name="titulo_ticket">Título</string>
     <string name="descripcion_ticket">Descripción</string>
@@ -46,43 +45,43 @@
     <string name="tv_detalle_ticket">Detalle del ticket:</string>
     <string name="tv_detalle_cliente">Detalle del cliente:</string>
     <string name="tv_detalle_usuario">Detalle del usuario:</string>
-    <string name="toast_cancelar_detalle_ticket">No se han guardado ninguna modificación.</string>
+    <string name="toast_cancelar_detalle_ticket">No se ha guardado ninguna modificación.</string>
     <string name="toast_guardar_detalle_ticket">Guardando estado y comentarios del ticket.</string>
     <string name="mn_cerrar_sesion">Cerrar sesión</string>
     <string name="mn_salir_app">Salir</string>
-    <string name="tv_titulo_categorias">Categorias</string>
+    <string name="tv_titulo_categorias">Categorías</string>
     <string name="create_resetPass">¿Has olvidado tu contraseña?</string>
-    <string name="tv_titulo_listaTickets">Lista Tickets</string>
+    <string name="tv_titulo_listaTickets">Lista de Tickets</string>
     <string name="tv_titulo_nuevoTicket">Nuevo ticket</string>
     <string name="toast_unable_fetch_data_detalle">No se ha podido recuperar toda la información de la base de datos.</string>
     <string name="tv_ticket_list_filtro">Filtrar por estado:</string>
     <string name="ticket_update_fail">Error. Inténtelo más tarde.</string>
     <string name="tv_titulo_detalle">Detalle</string>
-    <string name="ticket_status_update">Estimado/a %1$s,\n\nQueremos informarte que el estado del ticket con ID: %2$d ha sido actualizado.\nEl nuevo estado del ticket es: %3$s.\n\nPor favor, no dudes en contactarnos si necesitas más información o asistencia.</string>
+    <string name="ticket_status_update">Estimado/a %1$s,\n\nQueremos informarle que el estado del ticket con ID: %2$d ha sido actualizado.\nEl nuevo estado del ticket es: %3$s.\n\nPor favor, no dude en contactarnos si necesita más información o asistencia.</string>
     <string name="ticket_status_update_subject">"Notificación: Cambio de estado en el ticket con ID: %1$d"</string>
-    <string name="verification_body">Hola! \nSu código de verificación es: %s</string>
+    <string name="verification_body">¡Hola!\nSu código de verificación es: %s</string>
     <string name="incorrect_rec_code">Código incorrecto.</string>
     <string name="correct_rec_code">Código correcto.</string>
-    <string name="no_password_conf">Por favor confirme su contraseña.</string>
-    <string name="password_changed_email_subject">!Su contraseña ha cambiado!</string>
-    <string name="password_changed_email_body">Estimado usuario,\n\nLa contraseña de acceso a su cuenta ResolverRocket ha sido modificada.\nPor favor, si usted no he reaalizado este cambio póngase en contacto con nosotros inmediatemente.</string>
+    <string name="no_password_conf">Por favor, confirme su contraseña.</string>
+    <string name="password_changed_email_subject">¡Su contraseña ha cambiado!</string>
+    <string name="password_changed_email_body">Estimado usuario,\n\nLa contraseña de acceso a su cuenta Resolver Rocket ha sido modificada.\nPor favor, si usted no ha realizado este cambio, póngase en contacto con nosotros inmediatamente.</string>
     <string name="password_changed_success">Contraseña cambiada satisfactoriamente.</string>
     <string name="password_changed_fail">Se ha producido un error.</string>
-    <string name="signature">"\n\n--\nSaludos cordiales,\nEquipo de Soporte\nResolveRocket\nCorreo: " +
+    <string name="signature">"\n\n--\nSaludos cordiales,\nEquipo de Soporte\nResolver Rocket\nCorreo: " +
                 "resolverocket2024@gmail.com\nTeléfono: +34 123 456 789\nSitio web: www.resolverocket.com"</string>
     <string name="iniciar_sesion">Iniciar sesión</string>
     <string name="recordaste_contraseña">¿Recordaste tu contraseña?</string>
     <string name="btn_enviar">Enviar</string>
     <string name="recuperar_contrasenia">Recuperar contraseña</string>
-    <string name="te_enviaremos_mail">Te enviaremos un email para restablecer tu contraseña.</string>
+    <string name="te_enviaremos_mail">Te enviaremos un correo electrónico para restablecer tu contraseña.</string>
     <string name="codigo_recuperacion">Código de recuperación</string>
-    <string name="introduce_codigo">Por favor, introduce el código de recuperación enviado a tu correo electrónico.</string>
-    <string name="no_recibiste_codigo">¿No recibiste el código?</string>
-    <string name="pulsa_aqui">Pulsa aquí.</string>
+    <string name="introduce_codigo">Por favor, introduzca el código de recuperación enviado a su correo electrónico.</string>
+    <string name="no_recibiste_codigo">¿No ha recibido el código?</string>
+    <string name="pulsa_aqui">Pulse aquí.</string>
     <string name="cambiar_contrasenia">Cambiar contraseña</string>
     <string name="introduce_contraseña">Ingrese y verifique su nueva contraseña.</string>
 
-    <string name="contenido_contrasenia">Tu contraseña debe contener al menos:</string>
+    <string name="contenido_contrasenia">Su contraseña debe contener al menos:</string>
     <string name="password_length">8 caracteres.</string>
     <string name="password_uppercase">1 letra mayúscula.</string>
     <string name="password_lowercase">1 letra minúscula.</string>
@@ -105,7 +104,7 @@
     Abierto: %8$s\n\n
     --------------\n\n
     Información del Usuario:\n
-    Email: %9$s\n
+    Correo electrónico: %9$s\n
     Nombre: %10$s\n
     Apellido: %11$s\n
     Teléfono: %12$s\n
@@ -120,7 +119,4 @@
     Provincia: %19$s\n
     Municipio: %20$s\n
 </string>
-
-
-
 </resources>
